# glutil

./: CMakeLists.txt  COPYING  LICENSE  glutil-config.cmake.in
cmake/Modules/: FindLZ4.cmake
contrib/: CMakeLists.txt
glutil/: Allocator.h  AttribPacker.cpp  AttribPacker.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Context.h  FullscreenQuad.cpp  FullscreenQuad.h  LoadProgram.cpp  LoadProgram.h  LoadTexture.cpp  LoadTexture.h  SimpleAllocator.cpp  SimpleAllocator.h  StaticBufferManager.cpp  StaticBufferManager.h  glutil.cpp  glutil.h  shader.h
glutil/detail/: FullscreenQuadImpl.cpp  FullscreenQuadImpl.h
glutil/shaders/: fsquad.glsl
util/: CMakeLists.txt
util/glsl2cpp/: CMakeLists.txt  main.cpp
